--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <canvas id="bgcanvas"></canvas>
     <div class="overlay">
       <div class="border">
-        <div id="msg" class="border inner"></div>
+        <div class="border">
+          <span id="msg"></div>
+        </div>
       </div>
     </div>
   </div>
